components/cluster-ingress/base/cluster-namespace-openshift-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: openshift-ingress
